# GeocomClass_Leica

example_leica_geocom/src/: main.cpp
leica_geocom/: CMakeLists.txt
leica_geocom/src/class_leica/: geocom_class_leica.cpp  geocom_class_leica.h
